styles/globals.css
/* ... */
body.capacitor-native input,
body.capacitor-native textarea,
body.capacitor-native select,
body.capacitor-native [contenteditable="true"] {
  font-size: max(1rem, 16px) !important;
  touch-action: manipulation;
}

textarea,
select,
input,
button {
  color: white;
  font-family: inherit;
}

optgroup {
  font-family: inherit;
}

textarea:not(.tailwind-scope textarea),
select:not(.tailwind-scope select),
input:not(.tailwind-scope input),
button:not(.tailwind-scope button),
video:not(.tailwind-scope video),
svg:not(.tailwind-scope svg) {
  font-size: 16px;
  outline: 0 !important;
  box-shadow: none !important;
}

code {
  color: #25e4eb;
}

a {
  outline: 0 !important;
  text-decoration: underline;
  color: white;
}

@media (hover: hover) {
  a:hover {
    color: rgb(179, 179, 179);
  }
}
@media only screen and (max-width: 1200px) {
  body,
  button:not(.tailwind-scope button),
  textarea:not(.tailwind-scope textarea),
  select,
  input:not(.tailwind-scope input),
  video {
    font-size: 14px !important;
  }
}
@media only screen and (max-width: 800px) {
  body,
  button:not(.tailwind-scope button),
  textarea:not(.tailwind-scope textarea),
  select,
  input:not(.tailwind-scope input),
  video {
    font-size: 12px !important;
  }
}
*:before,
*:after {
  position: absolute;
  content: "";
}

b:not(.tailwind-scope b) {
  font-weight: 600;
}

h1 {
  font-size: 20px;
  font-weight: 700;
  color: white;
}

h2:not(.tailwind-scope h2) {
  font-size: 18px;
  font-weight: 700;
  color: white;
}

h3:not(.tailwind-scope h3) {
  font-size: 18px;
  font-weight: 700;
  color: white;
}

h4:not(.tailwind-scope h4) {
  font-size: 18px;
  font-weight: 700;
  color: white;
}

h5:not(.tailwind-scope h5) {
  font-size: 18px;
  font-weight: 700;
  color: white;
}

@media only screen and (max-width: 800px) {
  h1 {
    font-size: 18px;
  }
  h2:not(.tailwind-scope h2) {
    font-size: 16px;
    font-weight: bold;
  }
  h3:not(.tailwind-scope h3) {
    font-size: 16px;
    font-weight: bold;
  }
  h4:not(.tailwind-scope h4) {
    font-size: 16px;
    font-weight: bold;
  }
  h5:not(.tailwind-scope h5) {
    font-size: 16px;
    font-weight: bold;
  }
}
.text-right {
  text-align: right;
}

.no-padding {
  padding: 0;
}

#walletconnect-wrapper {
  color: black !important;
}
#walletconnect-wrapper a {
  color: black !important;
}
#walletconnect-wrapper input {
  color: black !important;
}

.-cbwsdk-try-extension-cta {
  background-color: #0052ff !important;
  padding: 10px !important;
}

#footer {
  font-size: 14px;
  background-color: black;
  padding: 2rem;
  line-height: 18px;
}
#footer img {
  height: 18px;
  vertical-align: bottom;
}
@media only screen and (max-width: 800px) {
  #footer img {
    height: 14px;
    vertical-align: middle;
  }
}
#footer a {
  padding-top: 8px;
  padding-bottom: 8px;
  text-decoration: none;
  white-space: nowrap;
}
#footer a:hover {
  opacity: 0.75;
}

.twitter-share-button {
  background-color: #1d9bf0 !important;
  height: 30px;
  box-sizing: border-box;
  padding: 1px 12px 1px 6px !important;
  border-radius: 9999px;
  font-size: smaller !important;
}
.twitter-share-button:hover {
  background-color: #0c7abf !important;
}

.font-color {
  color: white;
}

.font-color-h {
  color: rgb(154, 154, 154);
}

.font-color-silver {
  color: rgb(147, 147, 159);
}

.font-color-blue {
  color: #0d6efd;
}

.font-color-green {
  color: #28a745;
}

.font-color-red {
  color: #dc3545;
}

.font-color-hover:hover {
  color: white;
}

.indented {
  margin-left: 5%;
}

.font-smaller {
  font-size: smaller;
}

.font-larger {
  font-size: larger;
}

.font-bolder {
  font-weight: bold;
}

.font-lighter {
  font-weight: 200;
}

.font-lightest {
  font-weight: 100;
}

.no-wrap {
  white-space: nowrap;
  min-width: fit-content;
}

.icon-black {
  background-color: rgb(34, 34, 34);
  color: white;
  display: block;
  height: 30px;
  width: 30px;
  text-align: center;
  border-radius: 15px;
}

.icon-white {
  background-color: white;
  color: rgb(34, 34, 34);
  display: block;
  height: 30px;
  width: 30px;
  text-align: center;
  border-radius: 15px;
}

.decoration-none {
  text-decoration: none;
}

.decoration-underline {
  text-decoration: underline;
}

.decoration-hover-underline {
  text-decoration: none;
}
.decoration-hover-underline:hover {
  text-decoration: underline;
}

.scale-hover img {
  transition: transform 0.3s ease;
}
.scale-hover img:hover {
  transform: scale(1.02);
}

.seize-btn {
  border-radius: 0 !important;
  border: 0 !important;
  padding-left: 20px;
  padding-right: 20px;
  font-weight: bold;
}

.seize-btn-link {
  border-radius: 0 !important;
  padding-left: 20px;
  padding-right: 20px;
  background-color: transparent !important;
  border: transparent !important;
  text-decoration: underline;
  color: white !important;
}
.seize-btn-link:hover {
  color: rgb(154, 154, 154) !important;
}

.btn-white {
  background-color: white !important;
  color: black !important;
}
.btn-white:hover {
  background-color: rgb(215, 215, 215) !important;
}

.btn-black {
  background-color: black !important;
  color: white !important;
}
.btn-black:hover {
  background-color: rgb(51, 51, 51) !important;
}

.btn-green {
  background-color: #208359;
  color: white !important;
}
.btn-green:hover {
  background-color: rgb(37, 151, 103);
}

.btn-block {
  width: 100%;
}

.cursor-pointer {
  cursor: pointer;
}

.edit-profile {
  opacity: 0;
  transition:
    visibility 0s,
    opacity 0.3s ease-out;
}

.edit-profile:hover {
  visibility: visible;
  opacity: 1;
}

.unselectable {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.unselectable:focus {
  outline: none !important;
}

.btn-link {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}
.btn-link:hover,
.btn-link:focus,
.btn-link:active {
  background-color: inherit !important;
}
/* ... */

